# mysdk

./: .gitignore  README.md  demo.py  pyproject.toml
src/mysdk/: __init__.py  _runtime.py  client.py  config.py  errors.py  models.py
src/mysdk/actions/: __init__.py  audio.py  documents.py  images.py
tests/: test_client.py
